# Angry-Birds-group-project

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Meeting-notes.md  README.md  build.ps1  build.sh  cmake_install.cmake  example_level.ab
Box2D/: Makefile  cmake_install.cmake
Box2D/src/: Makefile  cmake_install.cmake
Box2D/testbed/: Makefile  cmake_install.cmake
Box2D/unit-test/: Makefile  cmake_install.cmake
SFML/: Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
SFML/src/SFML/: Makefile  cmake_install.cmake
SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
SFML/src/SFML/Main/: Makefile  cmake_install.cmake
SFML/src/SFML/Network/: Makefile  cmake_install.cmake
SFML/src/SFML/System/: Makefile  cmake_install.cmake
SFML/src/SFML/Window/: Makefile  cmake_install.cmake
build-angrybird-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_gameview.h  ui_mainmenu.h
build-angrybird-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/debug/: moc_gameview.cpp  moc_mainmenu.cpp
libs/Box2D/: CMakeLists.txt  build.bat  build.sh  desktop.ini
resources/levels/: level1.ab  level2.ab  level3.ab
resources/sprites/: grass
src/: ObjectCreator.hpp  angrybird.pro  bird.hpp  converter.hpp  converters.cpp  converters.hpp  game.cpp  game.hpp  gameview.cpp  gameview.h  gameview.ui  ground.hpp  high_scores.cpp  high_scores.hpp  level.cpp  level.hpp  level_end_menu.cpp  level_end_menu.hpp  level_selector.cpp  level_selector.hpp  main.cpp  mainMenu.cpp  mainMenu.hpp  main_menu.cpp  main_menu.hpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  menu.cpp  menu.hpp  mycanvas.h  object.cpp  object.hpp  pause_menu.cpp  pause_menu.hpp  pig.hpp  readme.md  sf_b2_converter.hpp  sfml_widget.cpp  sfml_widget.h  (+3 more)
tests/: CMakeLists.txt  tests.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
